cloudformation/brawlhub-cf-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Cloudformation template to deploy the infrastructure for Brawlhub.net

Resources:
  BrawlhubVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      Tags:
        - Key: Name
          Value: brawlhub-vpc

  BrawlhubPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref BrawlhubVPC
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: "true"
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: brawlhub-public-subnet-1

  BrawlhubPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref BrawlhubVPC
      CidrBlock: "10.0.2.0/24"
      MapPublicIpOnLaunch: "true"
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Name
          Value: brawlhub-public-subnet-2

  BrawlhubPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref BrawlhubVPC
      CidrBlock: "10.0.3.0/24"
      MapPublicIpOnLaunch: "false"
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Name
          Value: brawlhub-private-subnet-1

  BrawlhubPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref BrawlhubVPC
      CidrBlock: "10.0.4.0/24"
      MapPublicIpOnLaunch: "false"
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Name
          Value: brawlhub-private-subnet-2

  BrawlhubInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: brawlhub-internet-gateway

  BrawlhubVPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref BrawlhubInternetGateway
      VpcId: !Ref BrawlhubVPC

  BrawlhubPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref BrawlhubVPC
      Tags:
        - Key: Name
          Value: brawlhub-public-route-table

  BrawlhubPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref BrawlhubVPC
      Tags:
        - Key: Name
          Value: brawlhub-private-route-table

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref BrawlhubPublicSubnet1
      RouteTableId: !Ref BrawlhubPublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref BrawlhubPublicSubnet2
      RouteTableId: !Ref BrawlhubPublicRouteTable

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref BrawlhubPrivateSubnet1
      RouteTableId: !Ref BrawlhubPrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref BrawlhubPrivateSubnet2
      RouteTableId: !Ref BrawlhubPrivateRouteTable

  BrawlhubNATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: "vpc"
      Tags:
        - Key: Name
          Value: brawlhub-nat-gateway-eip

  BrawlhubNATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt BrawlhubNATGatewayEIP.AllocationId
      SubnetId: !Ref BrawlhubPublicSubnet1
      Tags:
        - Key: Name
          Value: brawlhub-nat-gateway

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref BrawlhubPublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref BrawlhubInternetGateway

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref BrawlhubPrivateRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref BrawlhubNATGateway
